// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > should render basic input 1`] = `
<div>
  <div
    class="lds--input__wrapper"
  >
    <input
      class="lds--input__input"
    />
  </div>
</div>
`;

exports[`Input > should render full input 1`] = `
<div>
  <div
    class="lds--input__wrapper"
  >
    <label
      class="lds--text lds--text--regular lds--text--md lds--text--default"
    >
      Test label
      <input
        class="lds--input__input"
        name="Example name"
        placeholder="Test placeholder"
        type="text"
        value="value"
      />
    </label>
  </div>
</div>
`;
